--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   
   <!-- index.html -->
-  <div class="button">Button!</div> 
-  <div class="button button-disabled">Button!</div> 
+  <div class="button">Button active</div> 
+  <div class="button button-disabled">Button disabled</div> 
 
   <div id="app"></div>
   
